feat: 당첨 번호와 보너스 번호를 입력받는 메서드 구현